--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -88,6 +88,7 @@
                 <span title="@name" class="filenameSpan">@name</span>
                 <span title="@dateString" class="dateTakenSpan">@dateString</span>
                 @if (!alreadyInLib[i]){<input title="Choose New Date Taken" type="datetime-local" @bind="@dateTakenList[ii]" @bind:event="oninput">}
+                @if (dataPresentList[i]){<span class="infoSpan">@dtSrc[i].ToString()</span>} @*Don't display now if DT is set to now*@
                 @if (!dataPresentList[i] && !alreadyInLib[i]){<span class="warnSpan">No DT found. DT set to now.</span>}
                 @if (alreadyInLib[i]){<span class="errorSpan">Item already in library. Won't upload.</span>}
                 
@@ -106,7 +107,8 @@
     private static List<DateTime> dateTakenList;
     private static List<bool> dataPresentList; //Any files where PSS couldn't determine date taken and is defaulting to DateTime.Now
     private static List<bool> alreadyInLib; //True if the item is already on the server (in your library).
-    
+    private static List<Metadata.DateTakenSrc> dtSrc; 
+
     //Filtering
     private static bool neitherChecked;
     private static bool warningChecked;
@@ -131,9 +133,10 @@
         pngPaths = Directory.GetFiles(PSS.Settings.uploadRootPath, "*.png", SearchOption.AllDirectories).ToList();
         jpgPaths = Directory.GetFiles(PSS.Settings.uploadRootPath, "*.jp*g", SearchOption.AllDirectories).ToList();
         allPaths = new List<string>(pngPaths.Concat(jpgPaths).ToArray());
-        dateTakenList = (from album in allPaths select new DateTime()).ToList();
-        dataPresentList = (from album in allPaths select new bool()).ToList();
-        alreadyInLib = (from album in allPaths select new bool()).ToList();
+        dateTakenList = (from path in allPaths select new DateTime()).ToList();
+        dataPresentList = (from path in allPaths select new bool()).ToList();
+        dtSrc = (from path in allPaths select Metadata.DateTakenSrc.Now).ToList(); //Now = default
+        alreadyInLib = (from path in allPaths select new bool()).ToList();
         
         neitherChecked = false;
         warningChecked = false;
@@ -142,7 +145,7 @@
 
         for (int i = 0; i < allPaths.Count; i++)
         {
-            dataPresentList[i] = Metadata.GetDateTaken(allPaths[i], out DateTime dateTaken);
+            (dataPresentList[i], dtSrc[i]) = Metadata.GetDateTaken(allPaths[i], out DateTime dateTaken);
             dateTakenList[i] = dateTaken;
             alreadyInLib[i] = ItemExists(Path.GetFileName(allPaths[i]), dateTakenList[i]);
         }
