--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -99,7 +99,7 @@
                 @if (!dataPresentList[i] && !alreadyInLib[i]){<span class="warnSpan">No DT found. DT set to now.</span>}
                 @if (alreadyInLib[i]){<span class="errorSpan">Item already in library. Won't upload.</span>}
                 
-                <button title="Remove This Item From the Upload" @onclick="@(() => DeleteBtnClick(ii))" class="material-icons">close</button>
+                <button title="Remove This Item From the Upload" @onclick="@(() => DeleteBtnClick(ii, allPaths[ii]))" class="material-icons">close</button>
             </div>
         }
     </div>
@@ -175,11 +175,14 @@
     }
 
     //Clears an item from the Lists
-    private static void DeleteBtnClick(int index)
+    private static void DeleteBtnClick(int index, string path)
     {
+        pngPaths.Remove(path);
+        jpgPaths.Remove(path);
         allPaths.RemoveAt(index);
         dateTakenList.RemoveAt(index);
         dataPresentList.RemoveAt(index);
+        status = allPaths.Count == 0 ? "No files found to add" : $"{pngPaths.Count + jpgPaths.Count} pictures and {0} videos pending upload";
     }
 
     //Adds all the items to photo library, and, if applicable, any albums.
