add title to filter

--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -7,7 +7,7 @@
 <link href="css/UploadApply.css" rel="stylesheet">
 
 <header>
-    <button @onclick="@(() => filterVis = filterVis == "hidden" ? "visible" : "hidden")">
+    <button @onclick="@(() => filterVis = filterVis == "hidden" ? "visible" : "hidden")" title="This filter thing sucks I know but how it works is check neither, warning, or error (just 1 at a time) to show just those items">
         <span class="material-icons-outlined">filter_list</span><span>Filter Items</span>
     </button>
     
