UpdateDateTaken() now works properly. Now updates path in album entries and moves it to the new path now, too.

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -6,7 +6,7 @@
 
 <title>Test</title>
 
-<button style="margin-left: 50%;" @onclick="@(() => UpdateStarred(@"2021\12 December\FF8EyTQWUAojmvr.jpg", true))">click me</button>
+<button style="margin-left: 50%;" @onclick="@(() => UpdateDateTaken(GetPathFromUuid("2dc3492e-6139-11ec-90c6-04421acfc461"), new DateTime(2013, 4, 5)))">click me</button>
 
 @code {
    
