--- a/PSS/wwwroot/css/Shared.css
+++ b/PSS/wwwroot/css/Shared.css
@@ -34,7 +34,7 @@
     align-items: center;
     font-size: 1rem;
     font-weight: 400;
-    padding: 11px 17px;
+    padding: 11px;
 }
 
 .iconBtn:hover {
