--- a/PSS/wwwroot/css/components/ViewItem.css
+++ b/PSS/wwwroot/css/components/ViewItem.css
@@ -15,18 +15,7 @@
 }
 
 button {
-    background: none;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
     margin: 3px;
-}
-
-button:hover {
-    background-color: rgba(211, 211, 211, 0.1);
-    cursor: pointer;
 }
 
 /* Div below the i button */
@@ -147,12 +136,6 @@ button:hover {
 }
 
 #datePicker > #buttons > button {
-    color: white;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    border: none;
-    background: none;
     margin-top: 10px;
     margin-right: 5px;
     margin-bottom: 5px;
@@ -177,6 +160,9 @@ button:hover {
     height: 56px;
     width: 56px;
     z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .sideBtn:hover {
@@ -185,9 +171,6 @@ button:hover {
 
 .sideBtn > svg {
     fill: white;
-    position: absolute;
-    left: 10px;
-    top: 10px;
 }
 
 #leftBtn {left: 10px;}
