--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -1,7 +1,6 @@
 <style>
     nav > a {
         text-decoration: none;
-        color: white;
         background-color: black;
         border: none;
         border-radius: 4px;
@@ -19,7 +18,7 @@
     }
     
     nav > a:hover {
-        background-color: rgba(211, 211, 211, 0.1);
+        background-color: var(--hover-color);
         cursor: pointer;
     }
     
