--- a/PSS/wwwroot/css/Settings.css
+++ b/PSS/wwwroot/css/Settings.css
@@ -11,11 +11,12 @@
 }
 
 #settings-div > div > span {
-    color: white;
     font-family: 'Product Sans', serif;
     margin: 5px 0 0;
     padding: 0;
 }
+
+#settings-div > div > input {color: black;}
 
 .settings-pair {margin-top: 4px;}
 div > button {margin-top: 10px;}
