--- a/PSS/Pages/AlbumsMain.razor
+++ b/PSS/Pages/AlbumsMain.razor
@@ -7,27 +7,27 @@
 
 <header>
     <span id="albumsText">Albums</span>
-    <button @onclick="NewAlbumBtnClick" id="@newAlbumBtnId"><span class="material-icons-outlined">@newAlbumBtnIcon</span><span class="btnText">@newAlbumBtnText</span></button>
+    <button class="textBtn" @onclick="NewAlbumBtnClick" id="@newAlbumBtnId"><span class="material-icons-outlined">@newAlbumBtnIcon</span><span class="btnText">@newAlbumBtnText</span></button>
     <input type="text" placeholder="Enter new album name" @bind="newAlbumName" style="display: @albumInputDisplay"/>
-    <button @onclick="ConfirmBtnClick" style="display: @confirmBtnDisplay" id="confirmBtn"><span class="material-icons-outlined">check</span><span class="btnText">Confirm</span></button>
+    <button class="textBtn" @onclick="ConfirmBtnClick" style="display: @confirmBtnDisplay" id="confirmBtn"><span class="material-icons-outlined">check</span><span class="btnText">Confirm</span></button>
     
-    <button @onclick="@(() => sortDivVis = sortDivVis == "hidden" ? "visible" : "hidden")" id="sortBtn"><span class="material-icons-outlined">sort</span><span class="btnText">@sortBtnText</span></button>
+    <button class="textBtn" @onclick="@(() => sortDivVis = sortDivVis == "hidden" ? "visible" : "hidden")" id="sortBtn"><span class="material-icons-outlined">sort</span><span class="btnText">@sortBtnText</span></button>
     <div id="sortDiv" style="visibility: @sortDivVis"> @* This is ugly but I think it works well *@
-        <button @onclick="@(() => ChangeOrder(AMSortMode.Title))">
+        <button class="textBtn" @onclick="@(() => ChangeOrder(AMSortMode.Title))">
             <span class="material-icons-outlined" style="@(mode == AMSortMode.Title ? "color: #1a73e8" : "visibility: hidden")">check</span>
-            <span class="btnText" style="color: @(mode == AMSortMode.Title ? "#1a73e8" : "white")">Album Title</span>
+            <span style="color: @(mode == AMSortMode.Title ? "#1a73e8" : "white")">Album Title</span>
         </button>
-        <button @onclick="@(() => ChangeOrder(AMSortMode.TitleReversed))">
+        <button class="textBtn" @onclick="@(() => ChangeOrder(AMSortMode.TitleReversed))">
             <span class="material-icons-outlined" style="@(mode == AMSortMode.TitleReversed ? "color: #1a73e8" : "visibility: hidden")">check</span>
-            <span class="btnText" style="color: @(mode == AMSortMode.TitleReversed ? "#1a73e8" : "white")">Album Title Reversed</span>
+            <span style="color: @(mode == AMSortMode.TitleReversed ? "#1a73e8" : "white")">Album Title Reversed</span>
         </button>
-        <button @onclick="@(() => ChangeOrder(AMSortMode.LastModified))">
+        <button class="textBtn" @onclick="@(() => ChangeOrder(AMSortMode.LastModified))">
             <span class="material-icons-outlined" style="@(mode == AMSortMode.LastModified ? "color: #1a73e8" : "visibility: hidden")">check</span>
-            <span class="btnText" style="color: @(mode == AMSortMode.LastModified ? "#1a73e8" : "white")">Last Modified</span>
+            <span style="color: @(mode == AMSortMode.LastModified ? "#1a73e8" : "white")">Last Modified</span>
         </button>
-        <button @onclick="@(() => ChangeOrder(AMSortMode.LastModifiedReversed))">
+        <button class="textBtn" @onclick="@(() => ChangeOrder(AMSortMode.LastModifiedReversed))">
             <span class="material-icons-outlined" style="@(mode == AMSortMode.LastModifiedReversed ? "color: #1a73e8" : "visibility: hidden")">check</span>
-            <span class="btnText" style="color: @(mode == AMSortMode.LastModifiedReversed ? "#1a73e8" : "white")">Last Modified Reversed</span>
+            <span style="color: @(mode == AMSortMode.LastModifiedReversed ? "#1a73e8" : "white")">Last Modified Reversed</span>
         </button>
     </div>
 </header>
