--- a/PSS/wwwroot/css/AlbumsMain.css
+++ b/PSS/wwwroot/css/AlbumsMain.css
@@ -27,32 +27,6 @@ header > #albumsText {
     margin-right: 40px;
 }
 
-header > button {
-    background-color: black;
-    border: 1px solid white;
-    border-radius: 4px;
-    display: flex;
-    word-break: break-word;
-    word-wrap: break-word;
-    align-items: center;
-    letter-spacing: .01785714em;
-    font-size: 1rem;
-    font-weight: 400;
-    width: auto;
-    padding: 11px 11px 11px 10px;
-}
-
-/* Proper spacing for buttons' text */
-.btnText {
-    padding-left: 11px;
-    text-decoration: none;
-}
-
-button:hover {
-    background-color: rgba(211, 211, 211, 0.1);
-    cursor: pointer;
-}
-
 header > input[type="text"] {
     width: 200px;
     font-size: 16px;
@@ -75,24 +49,18 @@ header > input[type="text"] {
     right: 250px;
     background-color: black;
     border: 1px solid white;
-    width: 250px;
+    padding-right: 12px;
 }
 
 #sortDiv > button {
     width: 100%;
     border: none;
-    background-color: black;
     display: flex;
     align-items: center;
     letter-spacing: .01785714em;
     font-size: 1rem;
     font-weight: 400;
     padding: 11px 11px 11px 10px;
-}
-
-#sortDiv > button:hover {
-    background-color: rgba(211, 211, 211, 0.1);
-    cursor: pointer;
 }
 
 #mainDiv {
