add this rule that is used a lot

--- a/PSS/wwwroot/css/Shared.css
+++ b/PSS/wwwroot/css/Shared.css
@@ -39,7 +39,7 @@
 }
 
 /* Add space to right of button icon */
-.textBtn > span ~ span {padding-left: 11px;}
+button span ~ span, button svg ~ span {padding-left: 11px;}
 
 .iconBtn:hover, .textBtn:hover {
     background-color: var(--hover-color);
