--- a/PSS/wwwroot/css/Shared.css
+++ b/PSS/wwwroot/css/Shared.css
@@ -11,7 +11,7 @@
 
 * {
     --hover-color: rgba(211, 211, 211, 0.1);
-    font-family: Product Sans, serif;
+    font-family: Product Sans, sans-serif;
     color: white;
 }
 
